Fixed wrap in features area

--- a/module-1/global/morning/styles/main.css
+++ b/module-1/global/morning/styles/main.css
@@ -147,7 +147,7 @@ ul {
 
   .premium__features {
     flex-direction: row;
-    flex-wrap: no-wrap;
+    flex-wrap: wrap;
   }
 
   .premium__features__list {
